# claude-formatter

./: Cargo.toml  README.ja.md  README.md
.analysis/: architecture.md  architecture.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
hooks/: install.sh
src/: biome.rs  color.rs  config.rs  eof_newline.rs  main.rs  oxfmt.rs  resolve.rs  rustfmt.rs
